# honda-plug

./: .env  .env.local  .env.prod  .env.prod.example  .env.test  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.scripts.prod.yml  docker-compose.yml  prometheus.yml  pyproject.toml  pytest.ini  requirements-tests.txt  requirements.txt
.github/workflows/: build.yml
cron/: cron
nginx/: Dockerfile  nginx.conf
src/api/: urls.py
src/api/images/: serializers.py  urls.py  views.py
src/api/parts/: permissions.py  serializers.py  urls.py  views.py
src/api/reviews/: serializers.py  urls.py  views.py
src/api/stocks/: serializers.py  tasks.py  urls.py  views.py
src/clients/: common.py  epcdata.py  hondapartsnow.py  hondapartsonline.py
src/django/main/: settings.py
src/main/: parts_to_sneak.py  settings.py  urls.py  views.py
src/part/: admin.py  apps.py  constants.py  documents.py  lambdas.py  managers.py  metrics.py  models.py  part.py  signals.py  tasks.py  validators.py
src/part/fixtures/: fixtures.json
src/part/migrations/: 0001_initial.py  0001_squashed_0041_alter_historicalstock_title_alter_stock_title.py  0002_rename_reference_stock_part_stock_available_and_more.py  0003_part_source_stock_source_alter_image_url.py  0004_alter_part_reference.py  0005_alter_stock_options_stock_quantity_and_more.py  0006_alter_part_reference.py  0007_alter_part_reference.py  0008_historicalstock_historicalpart.py  0009_alter_historicalstock_title_alter_stock_title.py  0010_historicalstock_url_stock_url.py  0011_alter_historicalpart_source_alter_part_source.py  0012_alter_historicalstock_source_alter_stock_source.py  (+55 more)
src/review/: admin.py  models.py
src/scrapper/: Dockerfile  requirements-tests.txt  utils.py
src/scripts/: acuraexpressparts.py  amayama.py  base.py  clockwisemotion.py  constants.py  duplicates.py  epc_parser.py  epcdata.py  hondaautomotiveparts.py  hondapartsnow.py  hondaspareparts.py  piecesautohonda.py  piecesautohonda_get_parts.py  tegiwa.py  update_parts.py  utils.py
src/tests/: conftest.py  utils.py
(+94 files in other folders)
