[tool.poetry]
name = "honda-plug"
version = "0.1.0"
description = ""
authors = ["Pablo Buenaposada <pablo.buenaposada@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
django-rq = "^2.10.1"
django-environ = "^0.9.0"
django-countries = "7.5.1"
django-money = "^3.4.1"
django-simple-history = "^3.4.0"
django-prometheus = "^2.3.1"
django-elasticsearch-dsl = "^8.0"
django-elasticsearch-dsl-drf = "^0.22.5"
django_extensions = "^3.2.3"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.27.0"
psycopg2 = "^2.9.9"
sentry-sdk = "^1.39.2"
pycountry = "^23.12.11"
elasticsearch-dsl = "8.12.0" # temp fix for elasticsearch-dsl bug
fakeredis = "^1.9.0" # sounds like a dev only dependency but unfortunately it's referenced in settings.py
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"
pytest = "*"
pytest-vcr = "*"
pytest-django = "*"
model-bakery = "*"
freezegun = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
lint.select = [
    "F", # Pyflakes
    "E", # pycodestyle
    "W", # Warning
    "C90", # mccabe
    "I",  # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "PIE", # flake8-pie
    "Q", # flake8-quotes
    "SIM", # flake8-simplify
    "PGH", # pygrep-hooks
    "PLE", # Error
    "PLW", # Warning
    "RSE", # flake8-raise
    # TODO: DTZ, PT, TID, RET, ERA, PLR, TRY, UP, N
]
lint.ignore = [
    "E501",
    "E999" # https://github.com/charliermarsh/ruff/issues/282
]
# ruff doesn't get along with python 'match' syntax for now, so files containing this are excluded
exclude = [
    "src/scrapper/clients/tegiwa.py",
    "src/scrapper/clients/hondapartsnow.py",
    "src/part/migrations/0013_alter_stock_unique_together_historicalstock_country_and_more.py",
    "src/scrapper/clients/common.py",
]